fix: simulate merge conflict resolution
issue #9

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="about-text">
           <p>Hi! I'm Saleh Alkithiry, a tech enthusiast and aspiring developer. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
           <p>I enjoy building real-world projects, especially involving web development and data analysis. I’ve worked on solutions using Power BI, SQL, and Laravel.</p>
-          <p>888! I'm Saleh Alkithiry, a full-stack developer in training.</p>
+          <p>! I'm Saleh Alkithiry, a full-stack developer in training.</p>
           <ul>
             <li>📊 Data Analytics</li>
             <li>💻 Web Development</li>
