--- a/portfolio.html
+++ b/portfolio.html
@@ -4,539 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Brian's Portfolio</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f2f5;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: #111827;
-      color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-      color: #38bdf8;
-    }
-
-    .nav-links {
-      display: flex;
-      list-style: none;
-      gap: 2rem;
-    }
-
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      color: #38bdf8;
-    }
-
-    .nav-toggle {
-      display: none;
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-
-    .hero-section {
-      background: linear-gradient(to right, #3b82f6, #6366f1);
-      color: rgb(0, 0, 0);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-    }
-
-    .hero-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      max-width: 1100px;
-      gap: 3rem;
-    }
-
-    .hero-image {
-      flex: 1;
-      text-align: center;
-    }
-
-    .hero-image img {
-      width: 270px;
-      height: 270px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 5px solid rgb(50, 50, 50);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-    }
-
-    .hero-text {
-      flex: 2;
-      max-width: 600px;
-    }
-
-    .hero-text h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .hero-text .tagline {
-      font-size: 1.4rem;
-      font-weight: 400;
-      margin-bottom: 1.5rem;
-    }
-
-    .fun-fact {
-      font-style: italic;
-      margin-bottom: 1rem;
-      color: #000000;
-    }
-
-    .quote {
-      border-left: 4px solid rgb(0, 0, 0);
-      padding-left: 1rem;
-      font-style: italic;
-      font-size: 1.1rem;
-      color: #000000;
-    }
-
-    @media (max-width: 768px) {
-      .nav-links {
-        display: none;
-        flex-direction: column;
-        background-color: #111827;
-        position: absolute;
-        top: 70px;
-        right: 0;
-        width: 200px;
-        padding: 1rem;
-      }
-
-      .nav-links.active {
-        display: flex;
-      }
-
-      .nav-toggle {
-        display: block;
-        color: white;
-      }
-
-      .hero-container {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .hero-text h1 {
-        font-size: 2.3rem;
-      }
-
-      .hero-image img {
-        width: 200px;
-        height: 200px;
-      }
-
-    }
-     .cta-button {
-      margin-top: 1.5rem;
-      padding: 0.6rem 1.2rem;
-      font-size: 1rem;
-      font-weight: 600;
-      background-color: #111827;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .cta-button:hover {
-      background-color: #374151;
-    }
-
-    @media (max-width: 768px) {
-      .cta-button {
-        width: 100%;
-      }
-    }
-
-    .footer {
-  background-color: #111827;
-  color: white;
-  padding: 2rem 1rem;
-  text-align: center;
-  animation: fadeInUp 1.5s ease-in;
-}
-
-.footer-container {
-  max-width: 1000px;
-  margin: auto;
-}
-
-.footer-text {
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-  color: #38bdf8; /* cyan for calm and modern vibe */
-}
-
-.social-icons {
-  display: flex;
-  justify-content: center;
-  gap: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.social-icon img {
-  width: 32px;
-  height: 32px;
-  transition: transform 0.3s ease, filter 0.3s ease;
-  filter: grayscale(100%);
-}
-
-.social-icon:hover img {
-  transform: scale(1.2);
-  filter: grayscale(0%);
-}
-
-.github img {
-  filter: invert(100%);
-}
-.linkedin img,
-.twitter img {
-  filter: grayscale(0%) brightness(150%);
-}
-.email img {
-  filter: brightness(200%) contrast(120%);
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@media (max-width: 600px) {
-  .footer-text {
-    font-size: 1rem;
-  }
-  .social-icons {
-    flex-wrap: wrap;
-  }
-}
-
-.section-divider {
-  width: 100%;
-  height: 80px;
-  background: linear-gradient(to right, #3b82f6, #6366f1);
-  clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%);
-  margin-bottom: -1px;
-}
-
-.about-section {
-  background-color: #ffffff;
-  padding: 4rem 2rem;
-  text-align: center;
-}
-
-.about-container {
-  max-width: 850px;
-  margin: auto;
-  animation: fadeInUp 1.2s ease-in-out;
-}
-
-.about-section h2 {
-  font-size: 2.5rem;
-  color: #111827;
-  margin-bottom: 1.5rem;
-  position: relative;
-}
-
-.about-section h2::after {
-  content: '';
-  width: 70px;
-  height: 4px;
-  background-color: #38bdf8;
-  display: block;
-  margin: 0.75rem auto 0;
-  border-radius: 2px;
-}
-
-.about-section p {
-  font-size: 1.15rem;
-  color: #444;
-  line-height: 1.8;
-  margin-bottom: 1.5rem;
-}
-
-.about-section .quote-about {
-  font-style: italic;
-  color: #10b981;
-  font-weight: 600;
-  font-size: 1.1rem;
-}
-
-.edu-skills-section {
-  background-color: #f9fafb;
-  padding: 4rem 2rem;
-  text-align: center;
-}
-
-.edu-skills-container {
-  max-width: 1100px;
-  margin: auto;
-  animation: fadeInUp 1.2s ease-in-out;
-}
-
-.edu-skills-section h2 {
-  font-size: 2.5rem;
-  color: #111827;
-  margin-bottom: 2rem;
-  position: relative;
-}
-
-.edu-skills-section h2::after {
-  content: '';
-  width: 70px;
-  height: 4px;
-  background-color: #38bdf8;
-  display: block;
-  margin: 0.75rem auto 0;
-  border-radius: 2px;
-}
-
-.flip-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 2rem;
-  justify-content: center;
-  align-items: stretch;
-  margin-top: 2rem;
-}
-
-.flip-card {
-  background: transparent;
-  perspective: 1000px;
-}
-
-.flip-inner {
-  position: relative;
-  width: 100%;
-  height: 220px;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-front,
-.flip-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 1.5rem;
-  border-radius: 10px;
-  backface-visibility: hidden;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-}
-
-.flip-front {
-  background: #ffffff;
-  color: #111827;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-left: 4px solid #38bdf8;
-}
-
-.flip-front h3 {
-  font-size: 1.3rem;
-  margin-bottom: 0.5rem;
-  color: #1e40af;
-}
-
-.flip-back {
-  background: #38bdf8;
-  color: #ffffff;
-  transform: rotateY(180deg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 500;
-  font-size: 1rem;
-}
-
-
-.projects-section {
-  background-color: #0f172a;
-  color: #ffffff;
-  padding: 4rem 2rem;
-  overflow: hidden;
-}
-
-.projects-container {
-  max-width: 1100px;
-  margin: auto;
-  text-align: center;
-  animation: fadeInUp 1.5s ease-in-out;
-}
-
-.projects-section h2 {
-  font-size: 2.5rem;
-  color: #38bdf8;
-  margin-bottom: 2rem;
-  position: relative;
-}
-
-.projects-section h2::after {
-  content: '';
-  width: 70px;
-  height: 4px;
-  background-color: #38bdf8;
-  display: block;
-  margin: 0.75rem auto 0;
-  border-radius: 2px;
-}
-
-.projects-slider {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-}
-
-.projects-track {
-  display: flex;
-  animation: scroll-left 25s linear infinite;
-  gap: 2rem;
-}
-
-.project-card {
-  flex: 0 0 auto;
-  background: #1e293b;
-  padding: 1.5rem;
-  border-radius: 12px;
-  min-width: 280px;
-  max-width: 300px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
-}
-
-.project-card:hover {
-  transform: scale(1.05);
-}
-
-.project-card h3 {
-  color: #38bdf8;
-  margin-bottom: 0.75rem;
-  font-size: 1.3rem;
-}
-
-.project-card p {
-  color: #cbd5e1;
-  font-size: 1rem;
-  line-height: 1.5;
-}
-
-@keyframes scroll-left {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
-}
-
-/* Responsive Pause on Hover (optional) */
-.projects-slider:hover .projects-track {
-  animation-play-state: paused;
-}
-
-@media (max-width: 600px) {
-  .project-card {
-    min-width: 240px;
-  }
-}
-
-.contact-form {
-  max-width: 600px;
-  margin: 2rem auto;
-  text-align: left;
-  background: #1e293b;
-  padding: 2rem;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.contact-form h3 {
-  color: #38bdf8;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.contact-form input,
-.contact-form textarea {
-  width: 100%;
-  padding: 0.75rem 1rem;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 8px;
-  background: #0f172a;
-  color: #ffffff;
-  font-size: 1rem;
-}
-
-.contact-form input::placeholder,
-.contact-form textarea::placeholder {
-  color: #94a3b8;
-}
-
-.contact-form button {
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #38bdf8;
-  color: #0f172a;
-  border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background 0.3s ease;
-}
-
-.contact-form button:hover {
-  background-color: #0ea5e9;
-}
-
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
