--- a/index.html
+++ b/index.html
@@ -4,26 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f4f6fa;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            padding: 32px 24px;
+        }
+        h1, h2 {
+            color: #2d3a4b;
+        }
+        .student-details, .learnings {
+            margin-bottom: 32px;
+        }
+        .student-details ul {
+            list-style: none;
+            padding: 0;
+        }
+        .student-details li {
+            margin-bottom: 8px;
+        }
+        .learnings .learning-item {
+            margin-bottom: 24px;
+            padding: 16px;
+            background: #f8fafc;
+            border-left: 4px solid #4f8cff;
+            border-radius: 6px;
+        }
+        .label {
+            font-weight: bold;
+            color: #4f8cff;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Personal Portfolio</h1>
+        <h1>Personal Portfolio Page</h1>
         <section class="student-details">
             <h2>Student Details</h2>
             <ul>
-                <li><span class="label">Full Name:</span>Kevin Ndyabandiho</li>
-                <li><span class="label">Admission Number:</span>122787</li>
-                <li><span class="label">GitHub Username:</span>@kevinhun1</li>
-                <li><span class="label">Email:</span>needfspeed234@gmail.com</li>
+                <li><span class="label">Full Name:</span> Kevin Ndyabandiho</li>
+                <li><span class="label">Admission Number:</span> 122787</li>
+                <li><span class="label">GitHub Username:</span> kevinhun1</li>
+                <li><span class="label">Email:</span> needfspeed234@gmail.com</li>
             </ul>
         </section>
         <section class="learnings">
             <h2>Learnings from the Git Crash Program</h2>
             <div class="learning-item">
                 <div class="label">1. Concept: Branching</div>
-                <div><strong>Expectation 👀</strong>: I thought branching was just for developers working on big apps—nothing I would need for a small project.</div>
-                <div><strong>Reality 😅</strong>: Turns out even solo devs need branches! It helped me avoid breaking my main code while testing new designs.</div>
-                <div><strong>Impact 💡</strong>: I created a feature branch for my "About Me" section and merged it smoothly into the main branch after testing. Super useful!</div>
+                <div><strong>  Expectation 👀</strong>: I thought branching was just for developers working on big apps—nothing I would need for a small project.</div>
+                <div><strong>  Reality 😅</strong>: Turns out even solo devs need branches! It helped me avoid breaking my main code while testing new designs.</div>
+                <div><strong>  Impact 💡</strong>: I created a feature branch for my "About Me" section and merged it smoothly into the main branch after testing. Super useful!</div>
             </div>
             <!-- Add more learning items below as needed -->
         </section>
