ci: Add an avatar to my header
Added an avatar and also updated the look of my name in header.

issue:#22

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,15 +11,32 @@
   <!-- Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">Brian's Portfolio</div>
+      <div class="logo">Brian's ssss Portfolio</div>
       <div class="nav-toggle" onclick="toggleNav()">☰</div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="#hero">Home</a></li>
+        <li><a href="#hero">Homesss</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+  <!-- Navbar -->
+<header>
+  <nav class="navbar">
+    <div class="logo-container">
+      <img src="Bull.png" alt="Avatar" class="avatar" />
+      <div class="logo artistic-logo">Brian's Portfolio</div>
+    </div>
+    <div class="nav-toggle" onclick="toggleNav()">☰</div>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <!-- Hero Section -->
   <section class="hero-section" id="hero">
