feat:Adding on the ScreenShots

--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
 
     <h3>A. Milestones and Issues</h3>
     <p>Shows the issues linked to a milestone like “MVP Launch.”</p>
-    <img src="images/milestone_issues.png" alt="Milestones and Issues"/>
+    <img src="images/Issues.png" alt=" Issues"/>
 
     <h3>B. Project Board</h3>
     <p>My Kanban board with tasks moving from To Do → Done.</p>
-    <img src="images/project_board.png" alt="Project Board"/>
+    <img src="images/Project-Board.png" alt="Project Board"/>
 
     <h3>C. Branching</h3>
     <p>Shows branches like <code>feature/contact-form</code>.</p>
-    <img src="images/branches.png" alt="Branches"/>
+    <img src="images/Branching.png" alt="Branches"/>
 
     <h3>D. Pull Requests</h3>
     <p>A merged PR connected to an issue.</p>
-    <img src="images/pull_request.png" alt="Pull Request"/>
+    <img src="images/Pull-Requests.png" alt="Pull Request"/>
 
     <h3>E. Merge Conflict Resolution</h3>
     <p>Conflict resolved between <code>main</code> and a feature branch.</p>
-    <img src="images/merge_conflict_resolved.png" alt="Merge Conflict"/>
+    <img src="images/Merge-Conflicts.png" alt="Merge Conflict"/>
   </div>
 
 </body>
