fix:Style:Updated portfolio style

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
   <div class="member">
     <h2>3. Learnings from the Git Crash Program</h2>
 
-    <h3>🧠 What I Thought I'd Learn vs What I Actually Learned</h3>
+    <h3> What I Thought I'd Learn vs What I Actually Learned</h3>
 
     <p><strong>1. Concept: Branching</strong><br>
-    <em>Expectation 👀:</em> I assumed branching was only needed when working with big teams.<br>
-    <em>Reality 😅:</em> Even solo devs benefit! I could test new ideas safely.<br>
-    <em>Impact 💡:</em> Helped me develop my "About Me" page without breaking the homepage.</p>
+    <em>Expectation :</em> I assumed branching was only needed when working with big teams.<br>
+    <em>Reality :</em> Even solo devs benefit! I could test new ideas safely.<br>
+    <em>Impact :</em> Helped me develop my "About Me" page without breaking the homepage.</p>
 
     <p><strong>2. Concept: Commit Messages</strong><br>
-    <em>Expectation 👀:</em> Just type "updated files" and move on, right?<br>
-    <em>Reality 😅:</em> Clear messages = a clear mind and clean history.<br>
-    <em>Impact 💡:</em> I could track what broke and when easily!</p>
+    <em>Expectation :</em> Just type "updated files" and move on, right?<br>
+    <em>Reality :</em> Clear messages = a clear mind and clean history.<br>
+    <em>Impact :</em> I could track what broke and when easily!</p>
 
     <p><strong>3. Concept: Issues and Milestones</strong><br>
-    <em>Expectation 👀:</em> Thought issues were just for open source projects.<br>
-    <em>Reality 😅:</em> Helped me plan tasks and break down the project.<br>
-    <em>Impact 💡:</em> My milestone list gave me a launch checklist!</p>
+    <em>Expectation :</em> Thought issues were just for open source projects.<br>
+    <em>Reality :</em> Helped me plan tasks and break down the project.<br>
+    <em>Impact :</em> My milestone list gave me a launch checklist!</p>
 
     <p><strong>4. Concept: Pull Requests</strong><br>
-    <em>Expectation 👀:</em> Pull requests are just for code reviews in teams.<br>
-    <em>Reality 😅:</em> It turns out PRs are useful for personal workflows too.<br>
-    <em>Impact 💡:</em> Made merging easier and changes more manageable.</p>
+    <em>Expectation :</em> Pull requests are just for code reviews in teams.<br>
+    <em>Reality :</em> It turns out PRs are useful for personal workflows too.<br>
+    <em>Impact :</em> Made merging easier and changes more manageable.</p>
   </div>
 
   <div class="member">
