refractor: update the learnings section.
Update the learnings section in the portfolio to include recent projects and skills acquired.

issue: is-project-4th-year/build-your-portfolio-github-workflow-essentials-kevinhun1#2

--- a/index.html
+++ b/index.html
@@ -61,12 +61,29 @@
         <section class="learnings">
             <h2>Learnings from the Git Crash Program</h2>
             <div class="learning-item">
-                <div class="label">1. Concept: Branching</div>
-                <div><strong>  Expectation 👀</strong>: I thought branching was just for developers working on big apps—nothing I would need for a small project.</div>
-                <div><strong>  Reality 😅</strong>: Turns out even solo devs need branches! It helped me avoid breaking my main code while testing new designs.</div>
-                <div><strong>  Impact 💡</strong>: I created a feature branch for my "About Me" section and merged it smoothly into the main branch after testing. Super useful!</div>
+                <div class="label">1. Concept: Commit Messages</div>
+                <div><strong>  Expectation 👀</strong>: I thought any short message would work for commits, as long as I could remember what I did.</div>
+                <div><strong>  Reality 😅</strong>: Structured commit messages made my project history much clearer and easier to follow, especially when looking back at changes.</div>
+                <div><strong>  Impact 💡</strong>: I started using clear, conventional commit messages, which helped me and others understand the purpose of each change at a glance.</div>
             </div>
-            <!-- Add more learning items below as needed -->
+            <div class="learning-item">
+                <div class="label">2. Concept: Pull Requests</div>
+                <div><strong>  Expectation 👀</strong>: I assumed pull requests were only for teams and not useful for solo projects.</div>
+                <div><strong>  Reality 😅</strong>: Using pull requests helped me review my own code before merging and kept my main branch stable.</div>
+                <div><strong>  Impact 💡</strong>: I used pull requests to organize my workflow and document the purpose of each feature or fix before merging.</div>
+            </div>
+            <div class="learning-item">
+                <div class="label">3. Concept: Project Boards</div>
+                <div><strong>  Expectation 👀</strong>: I thought project boards were overkill for a small portfolio and would just add extra work.</div>
+                <div><strong>  Reality 😅</strong>: The project board helped me visualize my progress and stay organized, even with a small set of tasks.</div>
+                <div><strong>  Impact 💡</strong>: I tracked my issues and milestones on the board, which kept me motivated and focused on completing each step.</div>
+            </div>
+            <div class="learning-item">
+                <div class="label">4. Concept: Merge Conflicts</div>
+                <div><strong>  Expectation 👀</strong>: I thought merge conflicts would be rare and easy to fix if they happened.</div>
+                <div><strong>  Reality 😅</strong>: I encountered a merge conflict while working on two features at once, and it took some effort to resolve without losing changes.</div>
+                <div><strong>  Impact 💡</strong>: I learned to read conflict markers and resolve issues carefully, which gave me more confidence in handling future conflicts.</div>
+            </div>
         </section>
     </div>
 </body>
