feat: add project section
Add thr project description section

issue #6

--- a/index.html
+++ b/index.html
@@ -19,35 +19,43 @@
   </header>
 
   <main>
+
+        <section id="projects">
+    <h2>Project worked on</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <h3>Connecting caregivers with parent of children with disabilities incoperating chatbot</h3>
+        <p>A system made to connect parent of children with disabilities to their required caregivers and utilizing a chatbot to answer question parents may have in regards to caregiver qualifications that are required. </p>
+        <p><strong>The technology used</strong> Python, Flask, HTML, CSS, Java, Django</p>
+      </div>
+    </div>
+  </section>
+
     <section id="about">
       <h2>About Me</h2>
       <div class="about-container">
         <img src="" alt="Profile Photo of " class="profile-photo">
         <div class="about-text">
-          <p>Hi! I'm Keith, an IT student. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
-          <p>I enjoy building real-world projects, especially involving web development and data analysis. I’ve worked on solutions using Power BI, SQL, and Laravel.</p>
+          <p>Hello there My name is Keith, I am an IT student. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
+          <p>I take part in various </p>
         </div>
       </div>
     </section>
 
-    <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <div class="project-card">
-        <h3>Student Dropout Prediction System</h3>
-        <p>A machine learning web tool that predicts student dropout risk in Kenyan universities using Random Forest and XGBoost.</p>
-        <p><strong>Tech Used:</strong> Python, Flask, HTML, CSS, XGBoost</p>
-        <a href="#">View GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Logistics Dashboard</h3>
-        <p>A Power BI dashboard analyzing transport routes, revenue, and costs for logistics decision-making.</p>
-        <p><strong>Tech Used:</strong> Power BI, SQL, Excel</p>
-        <a href="#">View Report</a>
-      </div>
-    </div>
-  </section>
 
+  <section id="contact">
+  <h2>Contact Information</h2>
+  <div class="contact-container">
+    <form class="contact-form">
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea rows="5" placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <div class="contact-info">
+      <p>📧 Email: keith.morara@strathmore.edu</p>
+    </div>
+  </div>
 </section>
 
   </main>
