--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Welcome to My Portfolio</h1>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li> 
+        <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>  
       </ul>
     </nav>
@@ -20,8 +20,8 @@
 
   <main>
 
-        <section id="projects">
-    <h2>Project worked on</h2>
+    <section id="projects">
+    <h2>Project description</h2>
     <div class="projects-container">
       <div class="project-card">
         <h3>Connecting caregivers with parent of children with disabilities incoperating chatbot</h3>
@@ -30,34 +30,6 @@
       </div>
     </div>
   </section>
-
-    <section id="about">
-      <h2>About Me</h2>
-      <div class="about-container">
-        <img src="" alt="Profile Photo of " class="profile-photo">
-        <div class="about-text">
-          <p>Hello there My name is Keith, I am an IT student. I'm currently pursuing a Bachelor of Informatics and Computer Science at Strathmore University.</p>
-          <p>I take part in various </p>
-        </div>
-      </div>
-    </section>
-
-
-  <section id="contact">
-  <h2>Contact Information</h2>
-  <div class="contact-container">
-    <form class="contact-form">
-      <input type="text" placeholder="Name" required>
-      <input type="email" placeholder="Email" required>
-      <textarea rows="5" placeholder="Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-    <div class="contact-info">
-      <p>📧 Email: keith.morara@strathmore.edu</p>
-    </div>
-  </div>
-</section>
-
   </main>
 
 </body>
