feature: Add a new project done on the portfolio
Issue: #5

--- a/.github/portfolio.html
+++ b/.github/portfolio.html
@@ -675,8 +675,12 @@
                     <p>An engaging travel platform built with modern web technologies and responsive design.</p>
                 </div>
                 <div class="project-card">
-                    <h3>ExpenseMaster</h3>
-                    <p>A powerful expense tracking application with intuitive user interface and robust functionality.</p>
+                    <h3>Chest Xray Anomaly Dectection</h3>
+                    <p>This was a group project done uing python and React.</p>
+                    <div class="project-card">
+                    <h3>Xray Detection</h3>
+                    <p>An intelligent chest X-ray anomaly detection system built with Python, capable of identifying potential abnormalities using deep learning.
+It enhances early diagnosis by analyzing radiographic images and providing accurate predictions with visual heatmaps.</p>
                 </div>
             </div>
         </section>
