feat: updated home page
update homepage with details

closes #10

--- a/src/index.html
+++ b/src/index.html
@@ -189,9 +189,9 @@
   <!-- FOOTER -->
   <footer>
     <div class="social-icons">
-      <a href="https://github.com/" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
-      <a href="mailto:you@example.com">Email</a>
+      <a href="https://github.com/TommyNdemoStrath" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/tom-ndemo-3b80b1310/" target="_blank">LinkedIn</a>
+      <a href="tom.ndemo@starthmore.edu">Email</a>
     </div>
     <p>&copy; 2025 Your Name. All rights reserved.</p>
   </footer>
