feat: updated home page
homepage updated

Closes #11

--- a/src/about.html
+++ b/src/about.html
@@ -87,17 +87,16 @@
 
   <!-- About Section -->
   <section class="about-section">
-    <h1>About Me</h1>
-    <p>
-      Hi, I'm Tom Ndemo, a web developer passionate about creating elegant, user-focused websites and apps.
-    </p>
-    <p>
-      My work combines design, code, and performance to build intuitive interfaces. I specialize in HTML, CSS, JavaScript, and love working with new frameworks and APIs.
-    </p>
-    <p>
-      Outside of tech, I enjoy exploring creative writing, solving logic puzzles, and contributing to open-source projects.
-    </p>
-  </section>
+   <h1>About Me</h1>
+      <p>
+        Hi, I'm Tom Ndemo, a Computer Science student and software developer with a strong focus on React, React Native, and Node.js. I'm currently working on impactful projects that range from AI-powered healthcare apps to service discovery platforms like AdInfinite.
+      </p>
+      <p>
+        I enjoy building practical, user-centered solutions—whether it's a lung sound classifier using CNN-BLSTM or a tourism app to help international visitors explore Kenya. I’m passionate about clean code, solving real-world problems, and learning new technologies, from machine learning models to scalable APIs.
+      </p>
+      <p>
+        Beyond tech, I’m deeply motivated by innovation for social good, including disaster relief optimization and empowering local businesses. I work best with purpose-driven goals, and I'm always excited to collaborate and grow.
+      </p>
 
   <!-- Footer -->
   <footer>
