feat: updated home page
homepage updated

Closes #11

--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
       <a href="https://www.linkedin.com/in/tom-ndemo-3b80b1310/" target="_blank">LinkedIn</a>
       <a href="tom.ndemo@starthmore.edu">Email</a>
     </div>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Tom Ndemo. All rights reserved.</p>
   </footer>
 
   <script>
