--- a/src/projects.html
+++ b/src/projects.html
@@ -206,6 +206,6 @@
     </section>
 
     <!-- Footer -->
-    <footer>&copy; 2025 Your Name. All rights reserved.</footer>
+    <footer>&copy; 2025 Tom Ndemo. All rights reserved.</footer>
   </body>
 </html>
