--- a/src/about.html
+++ b/src/about.html
@@ -62,6 +62,18 @@
       margin-bottom: 20px;
     }
 
+    .profile-image {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      display: block;
+      margin: 0 auto 30px auto;
+      border: 4px solid #00b894;
+      
+    }
+
+
     footer {
       background: #1e1e1e;
       text-align: center;
@@ -86,21 +98,25 @@
   </nav>
 
   <!-- About Section -->
-  <section class="about-section">
-   <h1>About Me</h1>
-      <p>
-        Hi, I'm Tom Ndemo, a Computer Science student and software developer with a strong focus on React, React Native, and Node.js. I'm currently working on impactful projects that range from AI-powered healthcare apps to service discovery platforms like AdInfinite.
-      </p>
-      <p>
-        I enjoy building practical, user-centered solutions—whether it's a lung sound classifier using CNN-BLSTM or a tourism app to help international visitors explore Kenya. I’m passionate about clean code, solving real-world problems, and learning new technologies, from machine learning models to scalable APIs.
-      </p>
-      <p>
-        Beyond tech, I’m deeply motivated by innovation for social good, including disaster relief optimization and empowering local businesses. I work best with purpose-driven goals, and I'm always excited to collaborate and grow.
-      </p>
+<!-- About Section -->
+<section class="about-section">
+  <img src="profile-image.jpeg" alt="Tom Ndemo Profile Picture" class="profile-image" />
+  <h1>About Me</h1>
+  <p>
+    Hi, I'm Tom Ndemo, a Computer Science student and software developer with a strong focus on React, React Native, and Node.js. I'm currently working on impactful projects that range from AI-powered healthcare apps to service discovery platforms like AdInfinite.
+  </p>
+  <p>
+    I enjoy building practical, user-centered solutions—whether it's a lung sound classifier using CNN-BLSTM or a tourism app to help international visitors explore Kenya. I’m passionate about clean code, solving real-world problems, and learning new technologies, from machine learning models to scalable APIs.
+  </p>
+  <p>
+    Beyond tech, I’m deeply motivated by innovation for social good, including disaster relief optimization and empowering local businesses. I work best with purpose-driven goals, and I'm always excited to collaborate and grow.
+  </p>
+</section>
+
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Tom Ndemo. All rights reserved.
   </footer>
 
 </body>
