--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -141,7 +141,7 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Tom Ndemo. All rights reserved.
   </footer>
 
 </body>
