--- a/src/about.html
+++ b/src/about.html
@@ -92,8 +92,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact-page.html">Contact</a></li>
     </ul>
   </nav>
 
