--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -125,7 +125,7 @@
   <!-- Contact Section -->
   <section class="contact-section">
     <h1>Contact Me</h1>
-    <form action="https://formsubmit.co/your@email.com" method="POST">
+    <form action="https://formsubmit.co/tom.ndemo@strathmore.edu" method="POST">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required />
 
