--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
     <div class="social-icons">
       <a href="https://github.com/TommyNdemoStrath" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/tom-ndemo-3b80b1310/" target="_blank">LinkedIn</a>
-      <a href="tom.ndemo@starthmore.edu">Email</a>
+      <a href="tom.ndemo@strathmore.edu">Email</a>
     </div>
     <p>&copy; 2025 Tom Ndemo. All rights reserved.</p>
   </footer>
