--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Project structure set up for portfolio -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Peris Mwangi | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Portfolio</h1>
+    <p>This is where creativity meets code.</p>
+  </header>
+</body>
+</html>
