--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <header>
+
+    <nav>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
     <h1>Welcome to My Portfolio</h1>
     <p>This is where creativity meets code.</p>
   </header>
